assets/deployments/configurator/configurator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configurator
  labels:
    app: configurator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configurator
  template:
    metadata:
      labels:
        app: configurator
    spec:
      containers:
      - name: configurator
        image: "279559645400.dkr.ecr.us-west-1.amazonaws.com/solui/configurator:G8R2SP4"
        ports:
        - containerPort: 5021
        volumeMounts:
        - name: configurator-mount
          mountPath: /opt/ibaset/solumina-web-configurator/config


      volumes:
       - name: configurator-mount
         configMap:
            defaultMode: 420
            items:
            - key: configuratorConfig
              path: .env
            name: configurator-cm
