assets/deployments/configurator/configurator-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: configurator
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: --DNS_NAME--
      http:
        paths:
          - path: /configuration
            backend:
              serviceName: configurator
              servicePort: 5021
